--- a/forms/mainwindow.ui
+++ b/forms/mainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>zeitdice</string>
+   <string>zeitmachine</string>
   </property>
   <property name="styleSheet">
    <string notr="true"/>
@@ -91,7 +91,7 @@
   </widget>
   <action name="actionPlay">
    <property name="icon">
-    <iconset resource="../zeitdice.qrc">
+    <iconset resource="../zeitmachine.qrc">
      <normaloff>:/icons/icons/play.png</normaloff>
      <normalon>:/icons/icons/play.png</normalon>:/icons/icons/play.png</iconset>
    </property>
@@ -116,7 +116,7 @@
   </action>
   <action name="actionStop">
    <property name="icon">
-    <iconset resource="../zeitdice.qrc">
+    <iconset resource="../zeitmachine.qrc">
      <normaloff>:/icons/icons/stop.png</normaloff>:/icons/icons/stop.png</iconset>
    </property>
    <property name="text">
@@ -131,7 +131,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="../zeitdice.qrc">
+    <iconset resource="../zeitmachine.qrc">
      <normaloff>:/icons/icons/refresh.png</normaloff>:/icons/icons/refresh.png</iconset>
    </property>
    <property name="text">
@@ -143,7 +143,7 @@
   </action>
   <action name="actionMovie">
    <property name="icon">
-    <iconset resource="../zeitdice.qrc">
+    <iconset resource="../zeitmachine.qrc">
      <normaloff>:/icons/icons/download.png</normaloff>:/icons/icons/download.png</iconset>
    </property>
    <property name="text">
@@ -155,7 +155,7 @@
   </action>
   <action name="actionAbout">
    <property name="icon">
-    <iconset resource="../zeitdice.qrc">
+    <iconset resource="../zeitmachine.qrc">
      <normaloff>:/icons/icons/info.png</normaloff>:/icons/icons/info.png</iconset>
    </property>
    <property name="text">
@@ -167,7 +167,7 @@
   </action>
   <action name="actionCycleFramerates">
    <property name="icon">
-    <iconset resource="../zeitdice.qrc">
+    <iconset resource="../zeitmachine.qrc">
      <normaloff>:/icons/icons/sort-amount-asc.png</normaloff>:/icons/icons/sort-amount-asc.png</iconset>
    </property>
    <property name="text">
@@ -182,7 +182,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="../zeitdice.qrc">
+    <iconset resource="../zeitmachine.qrc">
      <normaloff>:/icons/icons/magic.png</normaloff>:/icons/icons/magic.png</iconset>
    </property>
    <property name="text">
@@ -197,7 +197,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="../zeitdice.qrc">
+    <iconset resource="../zeitmachine.qrc">
      <normaloff>:/icons/icons/magic.png</normaloff>:/icons/icons/magic.png</iconset>
    </property>
    <property name="text">
@@ -212,7 +212,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="../zeitdice.qrc">
+    <iconset resource="../zeitmachine.qrc">
      <normaloff>:/icons/icons/magic.png</normaloff>:/icons/icons/magic.png</iconset>
    </property>
    <property name="text">
@@ -227,7 +227,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="../zeitdice.qrc">
+    <iconset resource="../zeitmachine.qrc">
      <normaloff>:/icons/icons/magic.png</normaloff>:/icons/icons/magic.png</iconset>
    </property>
    <property name="text">
@@ -239,7 +239,7 @@
   </action>
   <action name="actionSettings">
    <property name="icon">
-    <iconset resource="../zeitdice.qrc">
+    <iconset resource="../zeitmachine.qrc">
      <normaloff>:/icons/icons/cogs.png</normaloff>:/icons/icons/cogs.png</iconset>
    </property>
    <property name="text">
@@ -251,7 +251,7 @@
   </action>
   <action name="actionOpen">
    <property name="icon">
-    <iconset resource="../zeitdice.qrc">
+    <iconset resource="../zeitmachine.qrc">
      <normaloff>:/icons/icons/folder-open.png</normaloff>:/icons/icons/folder-open.png</iconset>
    </property>
    <property name="text">
@@ -263,7 +263,7 @@
   </action>
   <action name="actionFlipY">
    <property name="icon">
-    <iconset resource="../zeitdice.qrc">
+    <iconset resource="../zeitmachine.qrc">
      <normaloff>:/icons/icons/arrows-v.png</normaloff>:/icons/icons/arrows-v.png</iconset>
    </property>
    <property name="text">
@@ -275,7 +275,7 @@
   </action>
   <action name="actionFlipX">
    <property name="icon">
-    <iconset resource="../zeitdice.qrc">
+    <iconset resource="../zeitmachine.qrc">
      <normaloff>:/icons/icons/arrows-h.png</normaloff>:/icons/icons/arrows-h.png</iconset>
    </property>
    <property name="text">
@@ -287,7 +287,7 @@
   </action>
   <action name="actionRotateCW">
    <property name="icon">
-    <iconset resource="../zeitdice.qrc">
+    <iconset resource="../zeitmachine.qrc">
      <normaloff>:/icons/icons/rotate-right.png</normaloff>:/icons/icons/rotate-right.png</iconset>
    </property>
    <property name="text">
@@ -299,7 +299,7 @@
   </action>
   <action name="actionRotateCCW">
    <property name="icon">
-    <iconset resource="../zeitdice.qrc">
+    <iconset resource="../zeitmachine.qrc">
      <normaloff>:/icons/icons/rotate-left.png</normaloff>:/icons/icons/rotate-left.png</iconset>
    </property>
    <property name="text">
@@ -311,7 +311,7 @@
   </action>
  </widget>
  <resources>
-  <include location="../zeitdice.qrc"/>
+  <include location="../zeitmachine.qrc"/>
  </resources>
  <connections/>
 </ui>
